deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: local-apps
  labels:
    name: local-apps
    environment: development
